# libxcam

./: .gitignore  .gitmodules  AUTHORS  Android.mk  ChangeLog  LICENSE  METADATA  Makefile.am  NOTICE  README.md  autogen.sh  code_style.sh  configure.ac
3alib/aiq/: aiq_wrapper.cpp
capi/: Makefile.am  context_priv.cpp  context_priv.h  xcam_handle.cpp  xcam_handle.h
capi/ctxs/: context_cl.cpp  context_cl.h  context_stitch.cpp  context_stitch.h  context_sv.cpp  context_sv.h  stitch_params.h
cl_kernel/: kernel_3a_stats.cl  kernel_3d_denoise.cl  kernel_bayer_pipe.cl  kernel_biyuv.cl  kernel_blc.cl  kernel_csc_rgba64torgba.cl  kernel_csc_rgbatolab.cl  kernel_csc_rgbatonv12.cl  kernel_demo.cl  kernel_demosaic.cl  kernel_denoise.cl  kernel_gamma.cl  kernel_gauss.cl  kernel_hdr_lab.cl  kernel_hdr_rgb.cl  kernel_hdronrggb.cl  kernel_image_warp.cl  kernel_macc.cl  kernel_newtonemapping.cl  kernel_retinex.cl  kernel_snr.cl  kernel_tnr_rgb.cl  kernel_tnr_yuv.cl  kernel_tonemapping.cl  kernel_wavelet_denoise.cl  kernel_wb.cl  kernel_yeenr.cl  kernel_yuv_pipe.cl
clx_kernel/: Makefile.am
doc/: Doxyfile  Makefile.am  xcam_footer.html
doc/yocto/: libxcam_sample.bb
m4/: .gitignore  clquote.m4  xcam-utils.m4
modules/: Makefile.am
modules/depth_prediction/: README.md  inference.py  model_converter.py  utils.py
modules/dnn/: Makefile.am  dnn_inference_engine.cpp  dnn_inference_engine.h  dnn_inference_utils.cpp  dnn_inference_utils.h  dnn_object_detection.cpp  dnn_object_detection.h  dnn_semantic_segmentation.cpp  dnn_semantic_segmentation.h  dnn_super_resolution.cpp  dnn_super_resolution.h
modules/dnn/depth_prediction/: README.md
modules/dnn/feathernet/: main.py
modules/dnn/feathernet/models/: MobileLiteNet.py
modules/dnn/inference/: Makefile.am  dnn_inference_engine.cpp  dnn_inference_engine.h  dnn_inference_utils.cpp  dnn_inference_utils.h  dnn_object_detection.cpp  dnn_object_detection.h  dnn_semantic_segmentation.cpp  dnn_semantic_segmentation.h  dnn_super_resolution.cpp  dnn_super_resolution.h
modules/dnn/sr/: README.md  main.py  test_quality.py  to_onnx.py
modules/dnn/sr/architecture/: __init__.py
modules/dnn/sr/architecture/edsr/: __init__.py
modules/dnn/sr/architecture/espcn/: __init__.py
modules/dnn/sr/architecture/esrgan/: __init__.py
modules/dnn/sr/architecture/fsrcnn/: __init__.py
modules/dnn/sr/architecture/prosr/: __init__.py
modules/dnn/sr/architecture/srcnn/: __init__.py
modules/dnn/sr/architecture/srgan/: __init__.py
modules/feathernet/: README.md
modules/gles/: Makefile.am  gl_blender.cpp  gl_blender.h  gl_blender_shaders_priv.cpp  gl_blender_shaders_priv.h  gl_buffer.cpp  gl_buffer.h  gl_command.cpp  gl_command.h  gl_compute_program.cpp  gl_compute_program.h  gl_copy_handler.cpp  gl_copy_handler.h  gl_dma_buffer_handler.cpp  gl_dma_buffer_handler.h  gl_fastmap_blender.cpp  gl_fastmap_blender.h  gl_geomap_handler.cpp  gl_geomap_handler.h  gl_image_handler.cpp  gl_image_handler.h  gl_image_shader.cpp  gl_image_shader.h  gl_program.cpp  gl_program.h  gl_shader.cpp  gl_shader.h  gl_stitcher.cpp  gl_stitcher.h  gl_sync.cpp  gl_sync.h  gl_texture.cpp  gl_texture.h  gl_utils.cpp  gl_utils.h  gl_video_buffer.cpp  (+3 more)
modules/ocv/: Makefile.am  cv_base_class.cpp  cv_base_class.h  cv_capi_feature_match.cpp  cv_capi_feature_match.h  cv_context.cpp  cv_context.h  cv_edgetaper.cpp  cv_edgetaper.h  cv_feature_match.cpp  cv_feature_match.h  cv_feature_match_cluster.cpp  cv_feature_match_cluster.h  cv_image_deblurring.cpp  cv_image_deblurring.h  cv_image_process_helper.cpp  cv_image_process_helper.h  cv_image_sharp.cpp  cv_image_sharp.h  cv_std.h  cv_utils.cpp  cv_utils.h  cv_wiener_filter.cpp  cv_wiener_filter.h
pkgconfig/: Makefile.am  libxcam.pc.in
plugins/: Makefile.am
plugins/smart/dvs/libdvs/: .gitignore  Makefile.am  libdvs.cpp  libdvs.h  stabilizer.cpp  stabilizer.h  stabilizer.hpp  test-image-stabilization.cpp
shaders/: Makefile.am
shaders/glslx/: .gitignore  Makefile.am
smartlib/: Makefile.am  sample_smart_analysis.cpp
tests/: .gitignore  Makefile.am  camera_calibration_CamC3C8K.json  camera_calibration_CamC6C8K.json  camera_calibration_insta.json  camera_calibration_insta360Pro_2.json  feature_match.cpp  test-binary-kernel.cpp  test-cl-image.cpp  test-device-manager.cpp  test-dnn-inference.cpp  test-gles-handler.cpp  test-image-blend.cpp  test-image-deblurring.cpp  test-image-stabilization.cpp  test-image-stitching.cpp  test-pipe-manager.cpp  test-poll-thread.cpp  test-render-surround-view.cpp  test-soft-image.cpp  test-surround-view.cpp  test-video-stabilization.cpp  test-vk-handler.cpp  test-xcamsrc-camera.sh  test_common.h  test_inline.h  test_stream.h  test_sv_params.h
tools/: add-quotation-marks.sh  cl_double_quotation.sh  convert-binary-to-text.sh  pre-commit-code-style.sh
wrapper/: Makefile.am
wrapper/gstreamer/: Makefile.am  gst_xcam_utils.h  gstxcambuffermeta.cpp  gstxcambuffermeta.h  gstxcambufferpool.cpp  gstxcambufferpool.h  gstxcamfilter.cpp  gstxcamfilter.h  gstxcamsrc.cpp  gstxcamsrc.h  main_dev_manager.cpp  main_dev_manager.h  main_pipe_manager.cpp  main_pipe_manager.h  stub.cpp  stub.h
wrapper/gstreamer/interface/: Makefile.am  gstxcaminterface.c  gstxcaminterface.h
xcore/: Makefile.am  aiq_handler.cpp  aiq_handler.h  analyzer_loader.cpp  analyzer_loader.h  atomisp_device.cpp  buffer_pool.cpp  buffer_pool.h  calibration_parser.cpp  calibration_parser.h  cl_3a_image_processor.cpp  cl_3a_image_processor.h  cl_3a_stats_context.cpp  cl_bayer_pipe_handler.cpp  cl_biyuv_handler.cpp  cl_blc_handler.h  cl_context.cpp  cl_context.h  cl_csc_handler.cpp  cl_csc_handler.h  cl_demo_handler.cpp  cl_denoise_handler.cpp  cl_denoise_handler.h  cl_gamma_handler.cpp  cl_gamma_handler.h  cl_gauss_handler.cpp  cl_hdr_handler.cpp  cl_hdr_handler.h  cl_hdronrggb_handler.cpp  cl_hdronrggb_handler.h  cl_image_handler.cpp  cl_image_handler.h  cl_image_scaler.cpp  cl_macc_handler.cpp  cl_macc_handler.h  cl_memory.cpp  cl_newtonemapping_handler.cpp  cl_newwavelet_denoise_handler.cpp  cl_retinex_handler.cpp  cl_snr_handler.cpp  (+112 more)
(+285 files in other folders)
